lab04/build/log/idf_py_stdout_output_3189909
[1/10] Building C object esp-idf/tone/CMakeFiles/__idf_tone.dir/tone.c.obj
FAILED: esp-idf/tone/CMakeFiles/__idf_tone.dir/tone.c.obj 
/opt/esp5/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/auto/fsf/coltony/Desktop/ECEn330_Fall24/lab04/build/config -I/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone -I/opt/esp5/esp-idf/components/newlib/platform_include -I/opt/esp5/esp-idf/components/freertos/config/include -I/opt/esp5/esp-idf/components/freertos/config/include/freertos -I/opt/esp5/esp-idf/components/freertos/config/xtensa/include -I/opt/esp5/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/opt/esp5/esp-idf/components/freertos/esp_additions/include -I/opt/esp5/esp-idf/components/esp_hw_support/include -I/opt/esp5/esp-idf/components/esp_hw_support/include/soc -I/opt/esp5/esp-idf/components/esp_hw_support/include/soc/esp32 -I/opt/esp5/esp-idf/components/esp_hw_support/port/esp32/. -I/opt/esp5/esp-idf/components/heap/include -I/opt/esp5/esp-idf/components/log/include -I/opt/esp5/esp-idf/components/soc/include -I/opt/esp5/esp-idf/components/soc/esp32 -I/opt/esp5/esp-idf/components/soc/esp32/include -I/opt/esp5/esp-idf/components/hal/platform_port/include -I/opt/esp5/esp-idf/components/hal/esp32/include -I/opt/esp5/esp-idf/components/hal/include -I/opt/esp5/esp-idf/components/esp_rom/include -I/opt/esp5/esp-idf/components/esp_rom/include/esp32 -I/opt/esp5/esp-idf/components/esp_rom/esp32 -I/opt/esp5/esp-idf/components/esp_common/include -I/opt/esp5/esp-idf/components/esp_system/include -I/opt/esp5/esp-idf/components/esp_system/port/soc -I/opt/esp5/esp-idf/components/esp_system/port/include/private -I/opt/esp5/esp-idf/components/xtensa/esp32/include -I/opt/esp5/esp-idf/components/xtensa/include -I/opt/esp5/esp-idf/components/xtensa/deprecated_include -I/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/sound -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=/auto/fsf/coltony/Desktop/ECEn330_Fall24/lab04=. -fmacro-prefix-map=/opt/esp5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/tone/CMakeFiles/__idf_tone.dir/tone.c.obj -MF esp-idf/tone/CMakeFiles/__idf_tone.dir/tone.c.obj.d -o esp-idf/tone/CMakeFiles/__idf_tone.dir/tone.c.obj -c /auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c: In function 'tone_start':
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:71:5: error: enumeration value 'SAW_T' not handled in switch [-Werror=switch]
   71 |     switch (tone) {
      |     ^~~~~~
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:71:5: error: enumeration value 'LAST_T' not handled in switch [-Werror=switch]
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:93:9: error: case label not within a switch statement
   93 |         case SAW_T:
      |         ^~~~
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:97:9: error: 'default' label not within a switch statement
   97 |         default:
      |         ^~~~~~~
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c: At top level:
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:103:5: warning: data definition has no type or storage class
  103 |     sound_cyclic(buffer, samples_per_period);
      |     ^~~~~~~~~~~~
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:103:5: error: type defaults to 'int' in declaration of 'sound_cyclic' [-Werror=implicit-int]
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:103:5: warning: parameter names (without types) in function declaration
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:103:5: error: conflicting types for 'sound_cyclic'; have 'int()'
In file included from /auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.h:4,
                 from /auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:5:
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/sound/sound.h:28:6: note: previous declaration of 'sound_cyclic' with type 'void(const void *, uint32_t)' {aka 'void(const void *, long unsigned int)'}
   28 | void sound_cyclic(const void *audio, uint32_t size);
      |      ^~~~~~~~~~~~
/auto/fsf/coltony/Desktop/ECEn330_Fall24/components/tone/tone.c:104:1: error: expected identifier or '(' before '}' token
  104 | }
      | ^
cc1: some warnings being treated as errors
[2/10] Performing build step for 'bootloader'
[1/1] cd /auto/fsf/coltony/Desktop/ECEn330_Fall24/lab04/build/bootloader/esp-idf/esptool_py && /opt/esp5/python_env/idf5.2_py3.10_env/bin/python /opt/esp5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /auto/fsf/coltony/Desktop/ECEn330_Fall24/lab04/build/bootloader/bootloader.bin
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
ninja: build stopped: subcommand failed.
